# 3d-render-engine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.claude/: settings.local.json
assets/models/: cube.mtl
shaders/: bloom_blur.frag  bloom_bright.frag  cube.frag  cube.vert  deferred_lighting.frag  fullscreen.vert  gbuffer.frag  gbuffer.vert  hdr_tonemap.frag  lighting.frag  lighting.vert  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert
src/: main.cpp
src/Core/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  Window.h
src/Graphics/: Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h
src/Renderer/: ShadowPass.cpp  ShadowPass.h
src/Scene/: Camera.cpp  Camera.h
